More configurable CompleteTextProvider