@@ -5,7 +5,6 @@
  */
 package cz.vutbr.fit.layout.rdf.text;
 
-import java.util.Collections;
 import java.util.List;
 
 import org.eclipse.rdf4j.model.IRI;
@@ -13,9 +12,13 @@ import org.eclipse.rdf4j.model.Model;
 import org.eclipse.rdf4j.model.impl.DynamicModelFactory;
 import org.eclipse.rdf4j.model.util.Values;
 
+import cz.vutbr.fit.layout.api.AreaConcatenator;
+import cz.vutbr.fit.layout.api.Concatenators;
 import cz.vutbr.fit.layout.api.Parameter;
 import cz.vutbr.fit.layout.api.ServiceException;
 import cz.vutbr.fit.layout.impl.BaseArtifactService;
+import cz.vutbr.fit.layout.impl.ParameterBoolean;
+import cz.vutbr.fit.layout.impl.ParameterString;
 import cz.vutbr.fit.layout.model.Area;
 import cz.vutbr.fit.layout.model.AreaTree;
 import cz.vutbr.fit.layout.model.Artifact;
@@ -32,11 +35,41 @@ import cz.vutbr.fit.layout.rdf.model.RDFAreaTree;
  */
 public class CompleteTextProvider extends BaseArtifactService
 {
+    private boolean leavesOnly;
+    private String separator;
 
     public CompleteTextProvider()
     {
+        this.leavesOnly = false;
+        this.separator = "%";
     }
     
+    public CompleteTextProvider(boolean leavesOnly, String separator)
+    {
+        this.leavesOnly = leavesOnly;
+        this.separator = separator;
+    }
+    
+    public boolean getLeavesOnly()
+    {
+        return leavesOnly;
+    }
+
+    public void setLeavesOnly(boolean leavesOnly)
+    {
+        this.leavesOnly = leavesOnly;
+    }
+
+    public String getSeparator()
+    {
+        return separator;
+    }
+
+    public void setSeparator(String separator)
+    {
+        this.separator = separator;
+    }
+
     @Override
     public String getId()
     {
@@ -58,7 +91,9 @@ public class CompleteTextProvider extends BaseArtifactService
     @Override
     public List<Parameter> defineParams()
     {
-        return Collections.emptyList();
+        return List.of(
+                new ParameterBoolean("leavesOnly", "Include only leaf areas"),
+                new ParameterString("separator", "Separator for text content (use % for space)", 0, 6));
     }
 
     @Override
@@ -87,9 +122,12 @@ public class CompleteTextProvider extends BaseArtifactService
             var repo = getServiceManager().getArtifactRepository();
             if (repo instanceof RDFArtifactRepository)
             {
+                // the area concatenator for applying the separator
+                final String esep = separator.replace("%", " ");
+                final AreaConcatenator concat = new Concatenators.SeparatedAreaConcatenator(esep, Concatenators.getDefaultBoxConcatenator());
                 // create a new model with the text content triples
                 Model model = (new DynamicModelFactory()).createEmptyModel();
-                recursiveAddText(((AreaTree) input).getRoot(), model);
+                recursiveAddText(((AreaTree) input).getRoot(), model, concat);
                 // insert the processedBy statement
                 model.add(input.getIri(), FL.processedBy, Values.literal(getId()));
                 // store the model in the context
@@ -104,13 +142,16 @@ public class CompleteTextProvider extends BaseArtifactService
             throw new ServiceException("Source artifact not specified or not an RDF area tree");    
     }
     
-    private void recursiveAddText(Area root, Model model)
+    private void recursiveAddText(Area root, Model model, AreaConcatenator concat)
     {
-        IRI subj = ((RDFArea) root).getIri();
-        String text = root.getText();
-        model.add(subj, SEGM.text, Values.literal(text));
+        if (!leavesOnly || root.isLeaf())
+        {
+            IRI subj = ((RDFArea) root).getIri();
+            String text = root.getText(concat);
+            model.add(subj, SEGM.text, Values.literal(text));
+        }
         for (Area child : root.getChildren())
-            recursiveAddText(child, model);
+            recursiveAddText(child, model, concat);
     }
     
 }
